--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,15 +2,21 @@ body {
 background-image: linear-gradient(blue, deepskyblue, white);
 }
 
+.hmu {
+color:white;
+}
+
 .Top {
+float: center;
 margin-bottom: 0;
+margin-left: 0;
 text-align: center;
 padding-bottom: 30px;
 color: white;
 }
 
-.Main {
-margin-top: 0;
+.Prettyboi {
+margin-left: 10px;
 }
 
 .Name {
@@ -38,6 +44,12 @@ margin-left: 5px;
 }
 
 .Section {
-font-size: 30px;
+font-size: 32px;
 text-align: center;
+}
+
+footer {
+font-size: 1px;
+text-align: center;
+margin-bottom: 0;
 }
