--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,171 +1,98 @@
 :root {
-    --menu-speed: 0.50s;
+    --primary-color: #064273;
+    --secondary-color: #1da2d8;
+    --tertiary-color: #def3f6;
 }
 
 body {
-    background-image: url(Dude.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: var(--tertiary-color);
     font-family: 'Montserrat', sans-serif;
 }
 
-.wrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-.wrap .toggler {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    cursor: pointer;
-    width: 5vw;
-    height: 92.5px;
-    opacity: 0;
-}
-
-.wrap .burger {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 70px;
-    height: 92.5px;
-    padding: 1rem;
-    background: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.wrap .burger > div {
-    position: relative;
-    flex: none;
-    width: 100%;
-    height: 2px;
-    background: #ffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease;
-}
-
-.wrap .burger > div::before,
-.wrap .burger > div::after {
-    content: '';
-    position: absolute;
-    z-index: 1;
-    top: -10px;
-    width: 100%;
-    height: 2px;
-    background: inherit;
-}
-
-.wrap .burger > div::after {
-    top: 10px;
-}
-
-.wrap .menu {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-}
-
-.wrap .menu > div {
+#menu {
     background-color: black;
-    width: 10vw;
-    height: 200vh;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    transform: scale(0);
-    transition: all 0.4s ease;
-}
-
-.wrap .menu > div > div {
-    text-align: left;
-    left: 0;
-    max-width: 25vw;
-    max-height: 100vh;
-    opacity: 0;
-}
-
-.wrap .menu > div > div > ul > li {
-    list-style: none;
-    font-family: Verdana;
-    color: #ffff;
-    font-size: 1.2rem;
-    padding: 1.2rem;
-}
-
-.wrap .menu > div > div > ul > li > a {
-    color: inherit;
-    transition: color 0.4s ease;
-}
-
-.wrap .toggler:checked + .burger > div {
-    transform: rotate(135deg);
-}
-
-.wrap .toggler:checked + .burger > div:before,
-.wrap .toggler:checked + .burger > div:after {
+    position: fixed;
     top: 0;
-    transform: rotate(90deg);
+    left: 0;
+    display: flex;
+    justify-content: left;
+    height: 50vw;
+    width: 8.5vw;
 }
 
-.wrap .toggler:checked ~ .menu {
-    visibility: visible;
+#menu ul {
+    margin-top: 6vw;
 }
 
-.wrap .toggler:checked ~ .menu > div {
-    transform: scale(1);
-    transition-duration: var(--menu-speed);
+#menu ul > li {
+    list-style: none;
+    padding-top: 1.5rem;
 }
 
-.wrap .toggler:checked ~ .menu > div > div {
-    opacity: 1;
-    transition: opacity 0.4s ease 0.4s;
-}
-
-header {
-    margin: 0;
-    padding: 0;
-    background-color: #ffff;
-    border-bottom: black solid 0.4px;
-}
-
-header h1 {
-    margin-top: -30px;
-    color: red;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
+#menu ul > li > a {
+    text-decoration: none;
+    color: #ffff;
+    font-family: Verdana;
+    font-size: 1.2rem;
 }
 
 #contact  {
     display: flex;
     align-items: center;
-    justify-content: right; 
+    justify-content: right;
+    padding-top: 5px;
+    padding-right: 10px;
+    color: var(--primary-color);
 }
 
 #contact a {
     padding-left: 20px;
 }
 
+header {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: var(--secondary-color);
+    border-bottom: black solid 0.4px;
+}
+
+header h1 {
+    margin-top: -30px;
+    color: var(--primary-color);
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 20px;
+}
+
+header h1 > span {
+    color: var(--tertiary-color);
+}
+
+#image {
+    z-index: -1;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+#image img {
+    height: 40vw;
+}
+
 #filler {
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 10vw;
-    margin-right: 40vw;
+    margin-left: 8vw;
+    padding-left: 15px;
     font-size: 30px;
     font-weight: bold;
 }
@@ -183,12 +110,9 @@ h3 {
 
 #prof, #acad, #pers {
     display: none;
-}
-
-#prof, #acad, #pers {
+    background: var(--tertiary-color);
     overflow-wrap: break-word;
     margin-left: 10vw;
-    margin-right: 40vw;
     font-size: 30px;
     font-weight: bold;
 }
@@ -197,28 +121,13 @@ h3 {
     flex-direction: column;
 }
 
-#prof h3 {
-    margin: 0;
-    padding: 0;
-}
-
-#prof h4 {
-    margin: 0;
-    padding: 0;
-}
-
-#prof p {
+#prof h4, #acad ul {
     margin: 0;
     padding: 0;
 }
 
 #acad {
     flex-direction: column;
-}
-
-#acad ul {
-    margin: 0;
-    padding: 0;
 }
 
 #pers {
